<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/inicio"
    android:background="@drawable/cafe"

    tools:context=".Inicio">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#84FFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/COOKIN"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#8C9EFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="COOKIN" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="38dp"
                android:layout_height="47dp"
                android:layout_marginStart="98dp"
                android:layout_marginLeft="98dp"
                app:layout_constraintStart_toEndOf="@+id/COOKIN"
                app:srcCompat="@drawable/galletas" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#7E00BCD4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <TextView
                android:id="@+id/RECETAS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#84FFFF"
                android:gravity="center"
                android:text="@string/level"
                android:textColor="#8C9EFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="NIVELES" />
        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="504dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="36dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="#00A7FFEB"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/gelatina" />

                    <TextView

                        android:id="@+id/tvDatos"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:text="@string/one"
                        android:textColor="#B388FF"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/button37"
                        android:layout_width="192dp"
                        android:layout_height="60dp"
                        android:onClick="nPrincipiante"
                        android:text="@string/beginner_btn"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/hotdog" />

                    <TextView
                        android:id="@+id/DOS"
                        android:layout_width="52dp"
                        android:layout_height="35dp"
                        android:text="@string/two"
                        android:textColor="#B388FF"
                        android:textColorHighlight="#9C27B0"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:onClick="nIntermedio"
                        android:text="@string/intermediate_btn"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardBackgroundColor="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="#00FFE57F"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/hamburger" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:text="@string/three"
                        android:textColor="#B388FF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button32"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:onClick="nAvanzado"
                        android:text="@string/advanced_btn"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardBackgroundColor="@android:color/transparent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/lasagna" />

                    <TextView
                        android:id="@+id/textView54"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:text="@string/four"
                        android:textColor="#B388FF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button24"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:onClick="nExperto"
                        android:text="@string/expert_btn"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardBackgroundColor="@android:color/transparent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView45"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/pizza" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:text="@string/five"
                        android:textColor="#B388FF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:onClick="nChef"
                        android:text="@string/chef_btn"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </TableRow>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/galletas" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>